--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,26 +9,28 @@
     <Button
         android:id="@+id/mainGoButton"
         android:layout_width="205dp"
-        android:layout_height="91dp"
-        android:layout_marginBottom="228dp"
+        android:layout_height="96dp"
+        android:layout_marginBottom="160dp"
         android:background="@color/colorPrimary"
-        android:text="General Kenobi!"
+        android:text="This is a button"
         android:textColor="@android:color/background_light"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
         tools:ignore="HardcodedText" />
 
     <EditText
         android:id="@+id/mainName"
-        android:hint="Hello there!"
         android:layout_width="wrap_content"
         android:layout_height="44dp"
-        android:layout_marginBottom="47dp"
+        android:layout_marginBottom="50dp"
         android:layout_marginTop="258dp"
         android:ems="10"
+        android:hint="Hello there!"
         android:inputType="textPersonName"
+        android:text="This is a plain text"
         app:layout_constraintBottom_toTopOf="@+id/mainGoButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
