--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,29 +10,30 @@
         android:id="@+id/mainGoButton"
         android:layout_width="205dp"
         android:layout_height="96dp"
-        android:layout_marginBottom="160dp"
+
+        android:layout_marginTop="23dp"
         android:background="@color/colorPrimary"
         android:onClick="sendMessage"
         android:text="This is a button"
         android:textColor="@android:color/background_light"
+
         android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/mainName"
         tools:ignore="HardcodedText" />
 
     <EditText
         android:id="@+id/mainName"
         android:layout_width="wrap_content"
         android:layout_height="44dp"
-        android:layout_marginBottom="50dp"
-        android:layout_marginTop="258dp"
+
         android:ems="10"
         android:hint="Hello"
         android:inputType="textPersonName"
         android:text="Hello "
-        app:layout_constraintBottom_toTopOf="@+id/mainGoButton"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
